--- a/views/manager_equipment.hbs
+++ b/views/manager_equipment.hbs
@@ -70,7 +70,6 @@
       </div>
     </header>
     <!-- Main Content-->
-  
     <div class="accordion" id="accordionExample">
       <br />
       <div class="accordion-item">
@@ -155,12 +154,13 @@
               </tr>
             </form>
           </table>
+              <br>
         </div>
       </div>
     </div>
   </div>
 </div>
-    <br /><br /><br />
+<br><br>
 <div class="container">
   <table style="line-height: 10px" class="table  table-hover">
     <thead>
@@ -197,6 +197,112 @@
             <button style=" width: 120px; height: 40px; background-color: #5769b4; color: #ffffff; border: 2px #5769b4 outset;" 
             type="submit" name="action" value="update"> 更新狀況</button>
           </td>
+          <td>
+            <button style=" width: 120px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset;"
+             type="submit" name="action" value="delete"> 刪除設備</button>
+          </td>
+        </form>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
+</div>
+  <br><br>
+  <hr style="border:3px #cccccc solid;" >
+ {{!-- 所有設備 --}}
+    <div class="accordion" id="accordionExample">
+      <br />
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne1" aria-expanded="false" aria-controls="collapseOne1"> 查詢 / 新增所有設備 </button>
+          <i class="fa-solid fa-caret-down"></i>
+        </h2>
+        <div id="collapseOne1" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">  
+            <div class="container">
+            <table
+              style="line-height: 10px"
+              class="table table-hover">
+              <thead>
+                <!--表示表格中不同直行 (column) 的標題-->
+                <tr style="background-color: #dfd1ef">
+                  <!--定義表格的橫列 (row)-->
+                  <th scope="col" align='center' valign="middle">設備種類</th>
+                  <th></th>
+                  <th></th>
+                </tr>
+              </thead>
+              <form action="/managerToEquipmentType/action" method="post">     
+                  <td align='center' valign="middle">
+                    <input type="text" class="form-control" id="typeResearch" name="typeResearch" value=""/>
+                  </td>               
+                  <td>
+                    <button  id="search"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name="action"  value="search">  查詢設備
+                    </button>
+                  </td>                
+                  <td>
+                    <button type="button" style=" width: 120px; height: 40px; background-color: #585aa5; color: #ffffff; border: 2px #787ac2 outset;" data-bs-toggle="modal" data-bs-target="#exampleModal1" data-bs-whatever="@mdo"> 新增設備
+                    </button>
+                  </td>
+                  <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel1" style="color: #000000; font-weight: bold">
+                            新增設備
+                          </h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <div class="mb-3">
+                            <label for="recipient-name" class="col-form-label" style="color: #335495; font-weight: bold">設備種類:</label>
+                            <input type="text" class="form-control" id="typeAdd" name="typeAdd"/>
+                          </div>                      
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >
+                            關閉
+                          </button>
+                          <button type="submit" name="action" value="add" class="btn btn-primary">
+                            新增設備
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+            </form>
+          </table>
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+ <br><br>
+<div class="container">
+  <table style="line-height: 10px" class="table  table-hover">
+    <thead>
+      <!--表示表格中不同直行 (column) 的標題-->
+      <tr style="background-color: #dfd1ef">
+        <!--定義表格的橫列 (row)-->
+        <th scope="col" align='center' valign="middle">設備種類</th>
+        <th></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each Typemessage}}
+      <tr>
+        <form action="/managerToEquipmentType/action" method="post">
+          <input type="hidden" name="searchSQL" value="{{../searchSQL}}"/>             
+          <input type="hidden" name="type" value="{{this.E_Type}}">         
+          <td align='center' valign="middle">{{this.E_Type}}</td>
+          {{!-- <td>
+            <button style=" width: 120px; height: 40px; background-color: #5769b4; color: #ffffff; border: 2px #5769b4 outset;" 
+            type="submit" name="action" value="update"> 更新狀況</button>
+          </td> --}}
           <td>
             <button style=" width: 120px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset;"
              type="submit" name="action" value="delete"> 刪除設備</button>
