--- a/views/supervisor_to_message.hbs
+++ b/views/supervisor_to_message.hbs
@@ -207,15 +207,15 @@
           <div style="text-align: left">
             <button
               type="button"
-              style=" width: 100px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"data-bs-toggle="modal"data-bs-target="#exampleModal"data-bs-whatever="@mdo">撰寫留言
+              style=" width: 100px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"data-bs-toggle="modal"data-bs-target="#exampleModal1"data-bs-whatever="@mdo">撰寫留言
             </button>
           </div>
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="exampleModalLabel" style="color: #000000; font-weight: bold" >
-                    撰寫處
+                    撰寫留言
                   </h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -249,7 +249,7 @@
                     標題
                   </th>
                   <th width="15%" scope="col" style="background-color: #dfd1ef">
-                    學號
+                    留言者
                   </th>
                   <th width="10%" scope="col" style="background-color: #dfd1ef">
                     日期
@@ -309,15 +309,15 @@
                                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                  <form action="/supervisorToMessage/modify" method="POST">
-                                  <input type="hidden" name="number" value="{{this.M_Number}}">
+                                  <input type="hidden" name="M_Number" value="{{this.M_Number}}">
                                   <div class="modal-body">
                                       <div class="mb-3">
                                         <label for="recipient-name" class="col-form-label" style="color: #335495; font-weight: bold" >標題:</label>
-                                        <input type="text" class="form-control" id="title" name="title" value=" {{this.M_Title}}"/>
+                                        <input type="text" class="form-control" id="title" name="M_Title" value="{{this.M_Title}}"/>
                                       </div>
                                       <div class="mb-3">
                                         <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold">內容:</label> 
-                                        <textarea class="form-control" id="content" name="content" >{{this.M_Content}}</textarea>
+                                        <textarea class="form-control" id="content" name="M_Content" value="{{this.M_Content}}">{{this.M_Content}}</textarea>
                                       </div>       
                                   </div>
                                   <div class="modal-footer">
@@ -331,7 +331,7 @@
                           <form action="/supervisorToMessage/delete" method="POST">
                             <input type="hidden" name="number" value="{{this.M_Number}}">
                             <td> <!--刪除-->
-                              <button class="material-icons" style="font-size:40px;color:red;background-color:unset;border: none" name="action" value="delete">
+                              <button class="material-icons" style="font-size:40px;color:red;background-color:unset;border: none">
                               delete
                               </button>
                             </td>
