--- a/views/manager_studentAccommodation.hbs
+++ b/views/manager_studentAccommodation.hbs
@@ -73,7 +73,7 @@
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
-          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢學生住宿資訊</button>
+          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢 / 新增學生住宿資訊</button>
           <i class="fa-solid fa-caret-down"></i>
         </h2>
         <div
@@ -132,7 +132,6 @@
                         {{/each}}
                       </select>
                     </td>
-
                       <td align='center' valign="middle">
                         <input type="text" class="form-control" id="room" name="room" value="" style="width: 130px" />
                       </td>
